# pytorch

libtorch_c++2a/: CMakeLists.txt  Dockerfile  build_in_docker.sh
libtorch_c++2a/include/torch/: CPUTensor.hpp  CPUVector.hpp  Concepts.hpp  Logical.hpp  Numerical.hpp  TensorLike.hpp
libtorch_c++2a/include/torch/nn/: Identity.hpp  Linear.hpp  Map.hpp  ModuleLike.hpp  Sequential.hpp  TanH.hpp
libtorch_c++2a/include/torch/ten/: CPUTensor.hpp  Logical.hpp  Mask.hpp  Numerical.hpp  TensorLike.hpp  TimeBatch.hpp  VectorLike.hpp
libtorch_c++2a/test/: CMakeLists.txt  CPUTensor.cpp
